# Repo-Intelligence-Agent

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  ARCHITECTURE_BUGFIX_REPORT.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAQ.md  FEATURES.md  INSTALLATION.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  TEMP_DIAGNOSTICS.md  TODO.md  TROUBLESHOOTING.md  docker-compose.dev.yml  docker-compose.prod.yml  issue_test_results.json  pyproject.toml  requirements.txt  test_ph2_graph.py
agents/: __init__.py  analyzer.py  evaluator.py  explainer.py  issue_mapper.py
backend/: __init__.py  api.py  cli.py  dependencies.py  logging_config.py  logging_middleware.py  main.py  mcp_server.py  metrics_middleware.py  security_middleware.py  settings.py
core/: __init__.py  analysis_registry.py  build_pipeline.py  cache.py  change_detector.py  execution_runner.py  execution_scheduler.py  incremental_build_planner.py  metrics.py  repository_context.py
data/: issue_cache.json
docs/: API_REFERENCE.md  DEVELOPMENT_SETUP.md  MVP_STATUS.md  TROUBLESHOOTING.md  VALIDATION_REPORT.md  api.md  architecture.md  cli.md  contributing.md  deployment.md  developer.md  installation.md  performance.md  production.md  repository-chat-v2.md  repository_intelligence_report_rfc.md
frontend/: .env.example  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
memory/: __init__.py  cache.py  chroma_store.py  sqlite_store.py
models/: __init__.py  api_surface.py  architecture.py  architecture_drift.py  build_event.py  call_graph.py  (+8 more)
(+202 files in other folders)
