[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-intelligence-agent"
version = "1.0.0"
description = "Production-grade codebase intelligence agent."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "networkx>=3.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.4.0",
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "google-genai>=0.1.1",
]

[project.scripts]
repo-intel = "backend.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", "data", "node_modules", "frontend", "cloned_repos"]
